--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAKXVuJsf0vANjBtlUIWcPj-wNWPkOc-S4&libraries=geometry,places,elevation&callback=initMap"></script>
 
     <style>
-        /* [إصلاح] منع التمرير على مستوى الصفحة والسماح به داخل العناصر فقط */
-        html, body { height: 100%; overflow: hidden; }
+        /* [إصلاح] إزالة القيد العام للسماح بالتمرير داخل العناصر */
+        html, body { height: 100%; }
         body { font-family: 'Cairo', sans-serif; overscroll-behavior: none; -webkit-tap-highlight-color: transparent; }
         .dark-mode { background-color: #020617; color: #e2e8f0; }
         .dark-mode body { background-color: #020617; }
@@ -2134,7 +2134,8 @@
             return (
                 <div className="h-screen w-screen flex flex-col bg-slate-100 dark:bg-slate-900">
                     <Header onToggleFullScreen={() => setIsMapFullScreen(f => !f)} isFullScreen={isMapFullScreen} onToggleSidebar={() => setIsSidebarOpen(true)} />
-                    <div className="flex flex-grow overflow-hidden">
+                    {/* [إصلاح] تعديل الحاوية للسماح بالتمرير الداخلي */}
+                    <div className="flex flex-grow min-h-0"> 
                         <div className={`${isMapFullScreen ? 'hidden' : ''} lg:block`}>
                             <Sidebar 
                                 isOpen={isSidebarOpen}
@@ -2170,7 +2171,6 @@
                             />
                         </div>
                         
-                        {/* [إصلاح] إزالة overflow-hidden من هنا للسماح بالتمرير الداخلي */}
                         <main className="flex-grow flex flex-col relative">
                             <div id="capture-area" className="flex-grow relative">
                                 <MapComponent
@@ -2196,7 +2196,6 @@
                                             groupName={selectedGroup?.name} 
                                             isTakingScreenshot={isTakingScreenshot}
                                         />
-                                        {/* [إصلاح] زر أدوات جديد لشاشات الحاسوب */}
                                         <div className="hidden lg:block absolute bottom-4 right-4 z-10">
                                             <button onClick={() => setIsToolsSheetOpen(true)} className="w-16 h-16 bg-blue-600 text-white rounded-full shadow-lg flex items-center justify-center hover:bg-blue-700 transition-all duration-300">
                                                 <Icon name="wrench" size={32} />
@@ -2292,7 +2291,6 @@
                                 />
                             )}
                             
-                            {/* [إصلاح] [تفعيل الأدوات] */}
                             {isToolsSheetOpen && (
                                 <ToolsSheet
                                     settings={{...displaySettings, isDeleteMode}}
