--- a/index.html
+++ b/index.html
@@ -187,6 +187,20 @@
         .dark-mode .area-label-card div {
             color: #cbd5e1;
         }
+
+        /* --- إطار مؤقت لقطة الشاشة --- */
+        .screenshot-frame {
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            border-radius: 0.75rem; /* lg in Tailwind */
+            box-shadow: inset 0 0 20px 5px rgba(0, 0, 0, 0.15);
+            background: linear-gradient(to bottom, rgba(255,255,255,0.05), rgba(0,0,0,0.05));
+            pointer-events: none;
+            z-index: 20;
+        }
     </style>
 </head>
 <body>
@@ -1083,7 +1097,7 @@
                             }
 
                             if (labelHtml) {
-                                newOverlays.push({ id: `point-${point.id}`, position: latLng, text: labelHtml, styleProps: { transform: 'translate(-50%, -42px)' } });
+                                newOverlays.push({ id: `point-${point.id}`, position: latLng, text: labelHtml, styleProps: { transform: 'translate(-50%, -38px)' } });
                             }
 
                             const utm = convertLatLngToUtm(point.lat, point.lng, utmZone);
@@ -2552,7 +2566,7 @@
                         </div>
                         
                         <main className="flex-grow flex flex-col relative overflow-hidden">
-                            <div className={`flex-shrink-0 relative transition-all duration-300 ${isMapFullScreen ? 'h-full' : `h-full lg:h-[${isDesktopTableExpanded ? '25%' : '60%'}]`}`} id="capture-area">
+                            <div className={`flex-shrink-0 relative transition-all duration-300 rounded-lg overflow-hidden ${isMapFullScreen ? 'h-full' : `h-full lg:h-[${isDesktopTableExpanded ? '25%' : '60%'}]`}`} id="capture-area">
                                 <MapComponent
                                     ref={mapApiRef}
                                     selectedArea={selectedArea}
