stable version working on pdf

--- a/index.html
+++ b/index.html
@@ -2426,7 +2426,7 @@
                             document.getElementById('bottom-nav-bar'),
                             document.getElementById('desktop-tools-button-container'),
                             document.getElementById('desktop-location-button'),
-                            // document.getElementById('active-area-indicator') // Removed to keep it visible
+                            document.getElementById('active-area-indicator')
                         ];
                         
                         elementsToHide.forEach(el => { if (el) el.style.visibility = 'hidden'; });
